// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared/UI/Accordion Custom Component 1`] = `
<button
  aria-expanded={false}
  className="css-1kdqbi0-Accordion"
  id="headlessui-disclosure-button-3"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="button"
>
  <h2
    className="css-o794fu-Typography-Accordion e1eqcpp10"
  >
    Do you know forest restoration app?
  </h2>
  <svg
    className="css-8ocl8v-Accordion"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`Storyshots Shared/UI/Accordion Primary 1`] = `
<button
  aria-expanded={false}
  className="css-1kdqbi0-Accordion"
  id="headlessui-disclosure-button-undefined"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="button"
>
  <h2
    className="css-o794fu-Typography-Accordion e1eqcpp10"
  >
    Do you know forest restoration app?
  </h2>
  <svg
    className="css-8ocl8v-Accordion"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`Storyshots Shared/UI/Button Contained 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Disabled 1`] = `
<button
  className="css-1k7z95i-Button e1p27jrl0"
  color="primary"
  disabled={true}
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Full Width 1`] = `
<button
  className="css-1yllye1-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Large 1`] = `
<button
  className="css-1hvu46c-Button e1p27jrl0"
  color="primary"
  size="large"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Link 1`] = `
<a
  className="css-7mou0n-Button e1p27jrl0"
  color="primary"
>
  My Button
</a>
`;

exports[`Storyshots Shared/UI/Button Medium 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  color="primary"
  size="medium"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button No Shadow 1`] = `
<button
  className="css-16j7oqy-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Outlined 1`] = `
<button
  className="css-hq98lq-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Primary 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Rounded 1`] = `
<button
  className="css-168lrg4-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Secondary 1`] = `
<button
  className="css-ojs4nx-Button e1p27jrl0"
  color="secondary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Small 1`] = `
<button
  className="css-cd38lc-Button e1p27jrl0"
  color="primary"
  size="small"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Text 1`] = `
<button
  className="css-15ghc94-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Card/AccordionCard Primary 1`] = `
<div
  className="css-z26b5d-Component"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
>
  <button
    aria-expanded={false}
    className="css-xj5f2k-AccordionCard"
    id="headlessui-disclosure-button-13"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <div
      className="css-xuxdb9-AccordionCard"
    >
      <span
        className="css-1lhz13y-Typography e1eqcpp10"
      >
        This is a title
      </span>
    </div>
    <svg
      className="css-1ja5sny-AccordionCard"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 15l7-7 7 7"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard No Rounded 1`] = `
<div
  className="css-tsum1f-Component"
  role="presentation"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Not Centered 1`] = `
<div
  className="css-pr5w44-Component"
  role="presentation"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Primary 1`] = `
<div
  className="css-z26b5d-Component"
  role="presentation"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Secondary 1`] = `
<div
  className="css-1bq3qse-Component"
  role="presentation"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Without Shadow 1`] = `
<div
  className="css-1mam3iy-Component"
  role="presentation"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/TitledCard Primary 1`] = `
<div
  className="css-z26b5d-Component"
  role="presentation"
>
  <div
    className="css-12qcvlk-TitledCard"
  >
    <h2
      className="css-1lhz13y-Typography e1eqcpp10"
    >
      Card
    </h2>
  </div>
  <div
    className="css-7mpaxq-TitledCard"
  >
    <div>
      Hello here
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Autocomplete Multiple 1`] = `
Array [
  <label
    className="css-ozawe6-Typography-MultipleAutocomplete e1eqcpp10"
    htmlFor="downshift-12-input"
    id="downshift-12-label"
  >
    Label
     
  </label>,
  <div>
    <div
      className="css-17svbyk-MultipleAutocomplete"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <span
        className="css-jxhgd4-Pill"
      >
        <span
          className="css-9dmnqu-Typography-Pill e1eqcpp10"
        >
          John
        </span>
        <div
          className="css-hls8o7-Pill"
        >
          <button
            aria-label="Close"
            className="css-5a6dou-CloseButton"
            onClick={[Function]}
          >
            <svg
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              width={14}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </button>
        </div>
      </span>
    </div>
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="downshift-12-menu"
      className="css-eliqfu-MultipleAutocomplete"
      role="combobox"
    >
      <div
        className="css-1hr276g-Input"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-12-menu"
          aria-labelledby="downshift-12-label"
          autoComplete="off"
          className="css-ny6pux-Component"
          id="downshift-12-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <label
          className="css-18uojik-Typography-Input e1eqcpp10"
          htmlFor="downshift-12-input"
        >
           
        </label>
      </div>
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-12-label"
    className="css-ecfv92-MultipleAutocomplete"
    id="downshift-12-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Autocomplete Primary 1`] = `
Array [
  <label
    className="css-1unkrv7-Typography-Autocomplete e1eqcpp10"
    htmlFor="downshift-0-input"
    id="downshift-0-label"
  >
    Label
     
  </label>,
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-0-menu"
    className="css-7cybzn-Autocomplete"
    role="combobox"
  >
    <div
      className="css-1hr276g-Input"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-0-menu"
        aria-labelledby="downshift-0-label"
        autoComplete="off"
        className="css-ny6pux-Component"
        id="downshift-0-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
      <label
        className="css-18uojik-Typography-Input e1eqcpp10"
        htmlFor="downshift-0-input"
      >
         
      </label>
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-0-label"
    className="css-ksmlrf-Autocomplete"
    id="downshift-0-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Autocomplete With Error 1`] = `
Array [
  <label
    className="css-1myuzso-Typography-Autocomplete e1eqcpp10"
    htmlFor="downshift-3-input"
    id="downshift-3-label"
  >
    Label
     
  </label>,
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-3-menu"
    className="css-7cybzn-Autocomplete"
    role="combobox"
  >
    <div
      className="css-1swh3qq-Input"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-3-menu"
        aria-labelledby="downshift-3-label"
        autoComplete="off"
        className="css-abokzd-Component"
        id="downshift-3-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
      <label
        className="css-18uojik-Typography-Input e1eqcpp10"
        htmlFor="downshift-3-input"
      >
         
      </label>
      <div
        className="css-safnee-Error"
      >
        <span
          className="css-dzbg2z-Typography-Error e1eqcpp10"
          fontSize="small"
        >
          This is an error
        </span>
      </div>
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-3-label"
    className="css-ksmlrf-Autocomplete"
    id="downshift-3-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Autocomplete With Hint 1`] = `
Array [
  <label
    className="css-1unkrv7-Typography-Autocomplete e1eqcpp10"
    htmlFor="downshift-6-input"
    id="downshift-6-label"
  >
    Label
     
  </label>,
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-6-menu"
    className="css-7cybzn-Autocomplete"
    role="combobox"
  >
    <div
      className="css-1hr276g-Input"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-6-menu"
        aria-labelledby="downshift-6-label"
        autoComplete="off"
        className="css-ny6pux-Component"
        id="downshift-6-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
      <label
        className="css-18uojik-Typography-Input e1eqcpp10"
        htmlFor="downshift-6-input"
      >
         
      </label>
      <div
        className="css-1y0sv9c-Hint"
      >
        <span
          className="css-19xwz45-Typography e1eqcpp10"
          fontSize="small"
        >
          This is a hint
        </span>
      </div>
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-6-label"
    className="css-ksmlrf-Autocomplete"
    id="downshift-6-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Autocomplete With Reset Option 1`] = `
Array [
  <label
    className="css-1unkrv7-Typography-Autocomplete e1eqcpp10"
    htmlFor="downshift-9-input"
    id="downshift-9-label"
  >
    Label
     
  </label>,
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-9-menu"
    className="css-7cybzn-Autocomplete"
    role="combobox"
  >
    <div
      className="css-1hr276g-Input"
    >
      <input
        aria-autocomplete="list"
        aria-controls="downshift-9-menu"
        aria-labelledby="downshift-9-label"
        autoComplete="off"
        className="css-ny6pux-Component"
        id="downshift-9-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
      <label
        className="css-18uojik-Typography-Input e1eqcpp10"
        htmlFor="downshift-9-input"
      >
         
      </label>
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-9-label"
    className="css-ksmlrf-Autocomplete"
    id="downshift-9-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Input Date 1`] = `
<div
  className="css-1hr276g-Input"
>
  <input
    className="css-ny6pux-Component"
    defaultValue=""
    id="test"
    type="date"
  />
  <label
    className="css-18uojik-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Password 1`] = `
<div
  className="css-1hr276g-Input"
>
  <input
    className="css-ny6pux-Component"
    defaultValue=""
    id="test"
    type="password"
  />
  <label
    className="css-18uojik-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Primary 1`] = `
<div
  className="css-1hr276g-Input"
>
  <input
    className="css-ny6pux-Component"
    defaultValue=""
    id="test"
    type="text"
  />
  <label
    className="css-18uojik-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Time 1`] = `
<div
  className="css-1hr276g-Input"
>
  <input
    className="css-ny6pux-Component"
    defaultValue=""
    id="test"
    type="time"
  />
  <label
    className="css-18uojik-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Custom Error 1`] = `
<div
  className="css-1swh3qq-Input"
>
  <input
    className="css-abokzd-Component"
    defaultValue=""
    id="test"
    type="text"
  />
  <label
    className="css-18uojik-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
  <div
    className="css-safnee-Error"
  >
    <div>
      A custom error
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Custom Hint 1`] = `
<div
  className="css-1hr276g-Input"
>
  <input
    className="css-ny6pux-Component"
    defaultValue=""
    id="test"
    type="text"
  />
  <label
    className="css-18uojik-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
  <div
    className="css-1y0sv9c-Hint"
  >
    <div>
      A custom hint
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Text Error 1`] = `
<div
  className="css-1swh3qq-Input"
>
  <input
    className="css-abokzd-Component"
    defaultValue=""
    id="test"
    type="text"
  />
  <label
    className="css-18uojik-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-dzbg2z-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Text Hint 1`] = `
<div
  className="css-1hr276g-Input"
>
  <input
    className="css-ny6pux-Component"
    defaultValue=""
    id="test"
    type="text"
  />
  <label
    className="css-18uojik-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-19xwz45-Typography e1eqcpp10"
      fontSize="small"
    >
      A useful hint to help you out
    </span>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select Multiple 1`] = `
<div
  className="css-w2vxd-Select"
>
  <div
    className="css-1q842lx-Select"
  >
    <span
      className="css-16e6xoq-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-17"
      onClick={[Function]}
    >
      Label
       
    </span>
  </div>
  <span
    className="css-1v701jn-MultipleValueButton"
  >
    <div
      aria-expanded={false}
      aria-haspopup={true}
      className="css-1nn7e9l-MultipleValueButton"
      disabled={false}
      id="headlessui-listbox-button-18"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <div
        className="css-1r7aiga-MultipleValueButton"
      >
        <span
          className="css-1xm5l6x-Typography-MultipleValueButton e1eqcpp10"
        >
          Please select an option
        </span>
      </div>
      <span
        className="css-wyugl8-Typography-MultipleValueButton e1eqcpp10"
      >
        <svg
          aria-hidden="true"
          className="css-me364i-MultipleValueButton"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 9l4-4 4 4m0 6l-4 4-4-4"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </span>
    </div>
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select Primary 1`] = `
<div
  className="css-w2vxd-Select"
>
  <div
    className="css-1q842lx-Select"
  >
    <span
      className="css-16e6xoq-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-15"
      onClick={[Function]}
    >
      Label
       
    </span>
  </div>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="css-1knnve3-SingleValueButton"
    disabled={false}
    id="headlessui-listbox-button-16"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="css-ojkwgo-Typography-SingleValueButton e1eqcpp10"
    >
      Select a value
    </span>
    <span
      className="css-12typrg-Typography-SingleValueButton e1eqcpp10"
    >
      <svg
        aria-hidden="true"
        className="css-14fqnzk-SingleValueButton"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 9l4-4 4 4m0 6l-4 4-4-4"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select With Error 1`] = `
Array [
  <div
    className="css-w2vxd-Select"
  >
    <div
      className="css-1q842lx-Select"
    >
      <span
        className="css-1ep4288-Typography-Select e1eqcpp10"
        id="headlessui-listbox-label-19"
        onClick={[Function]}
      >
        Label
         
      </span>
    </div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="css-rxay7n-SingleValueButton"
      disabled={false}
      id="headlessui-listbox-button-20"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-ojkwgo-Typography-SingleValueButton e1eqcpp10"
      >
        Select a value
      </span>
      <span
        className="css-12typrg-Typography-SingleValueButton e1eqcpp10"
      >
        <svg
          aria-hidden="true"
          className="css-14fqnzk-SingleValueButton"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 9l4-4 4 4m0 6l-4 4-4-4"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-dzbg2z-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/Form/Select With Hint 1`] = `
Array [
  <div
    className="css-w2vxd-Select"
  >
    <div
      className="css-1q842lx-Select"
    >
      <span
        className="css-16e6xoq-Typography-Select e1eqcpp10"
        id="headlessui-listbox-label-21"
        onClick={[Function]}
      >
        Label
         
      </span>
    </div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="css-1knnve3-SingleValueButton"
      disabled={false}
      id="headlessui-listbox-button-22"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-ojkwgo-Typography-SingleValueButton e1eqcpp10"
      >
        Select a value
      </span>
      <span
        className="css-12typrg-Typography-SingleValueButton e1eqcpp10"
      >
        <svg
          aria-hidden="true"
          className="css-14fqnzk-SingleValueButton"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 9l4-4 4 4m0 6l-4 4-4-4"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-19xwz45-Typography e1eqcpp10"
      fontSize="small"
    >
      This is a hint
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/Form/Select With Placeholder 1`] = `
<div
  className="css-w2vxd-Select"
>
  <div
    className="css-1q842lx-Select"
  >
    <span
      className="css-16e6xoq-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-25"
      onClick={[Function]}
    >
      Label
       
    </span>
  </div>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="css-1knnve3-SingleValueButton"
    disabled={false}
    id="headlessui-listbox-button-26"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="css-ojkwgo-Typography-SingleValueButton e1eqcpp10"
    >
      Please select an option wisely
    </span>
    <span
      className="css-12typrg-Typography-SingleValueButton e1eqcpp10"
    >
      <svg
        aria-hidden="true"
        className="css-14fqnzk-SingleValueButton"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 9l4-4 4 4m0 6l-4 4-4-4"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select With Reset Option 1`] = `
<div
  className="css-w2vxd-Select"
>
  <div
    className="css-1q842lx-Select"
  >
    <span
      className="css-16e6xoq-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-23"
      onClick={[Function]}
    >
      Label
       
    </span>
  </div>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="css-1knnve3-SingleValueButton"
    disabled={false}
    id="headlessui-listbox-button-24"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="css-ojkwgo-Typography-SingleValueButton e1eqcpp10"
    >
      Select a value
    </span>
    <span
      className="css-12typrg-Typography-SingleValueButton e1eqcpp10"
    >
      <svg
        aria-hidden="true"
        className="css-14fqnzk-SingleValueButton"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 9l4-4 4 4m0 6l-4 4-4-4"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Bottom 1`] = `
<div
  className="css-1halu6f-Switch"
>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-34"
    className="css-i4flkr-Switch"
    id="headlessui-switch-33"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1ldsxb7-Switch"
    />
  </button>
  <span
    className="css-a4pg8w-Typography-Label e1eqcpp10"
    id="headlessui-label-34"
    onClick={[Function]}
  >
    Switch
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Disabled 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <span
    className="css-1ng4m2i-Typography-Label e1eqcpp10"
    id="headlessui-label-39"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-39"
    className="css-9bbghf-Switch"
    id="headlessui-switch-40"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-vi6nt4-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Hidden 1`] = `
<div
  className="css-1dgmue2-Switch"
>
  <button
    aria-checked={true}
    className="css-i4flkr-Switch"
    id="headlessui-switch-35"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1ldsxb7-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Not Checked 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <span
    className="css-a4pg8w-Typography-Label e1eqcpp10"
    id="headlessui-label-37"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={false}
    aria-labelledby="headlessui-label-37"
    className="css-5mbv1f-Switch"
    id="headlessui-switch-38"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1rpbwei-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Primary 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <span
    className="css-a4pg8w-Typography-Label e1eqcpp10"
    id="headlessui-label-27"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-27"
    className="css-i4flkr-Switch"
    id="headlessui-switch-28"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1ldsxb7-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Right 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-30"
    className="css-i4flkr-Switch"
    id="headlessui-switch-29"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1ldsxb7-Switch"
    />
  </button>
  <span
    className="css-a4pg8w-Typography-Label e1eqcpp10"
    id="headlessui-label-30"
    onClick={[Function]}
  >
    Switch
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Top 1`] = `
<div
  className="css-1halu6f-Switch"
>
  <span
    className="css-a4pg8w-Typography-Label e1eqcpp10"
    id="headlessui-label-31"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-31"
    className="css-i4flkr-Switch"
    id="headlessui-switch-32"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1ldsxb7-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch With Double Text 1`] = `
<div
  className="flex flex-row gap-2"
>
  <span
    className="css-kxpzc2-Typography e1eqcpp10"
  >
    Left
  </span>
  <div
    className="css-1dgmue2-Switch"
  >
    <button
      className="css-5mbv1f-Switch"
      id="headlessui-switch-36"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
    >
      <label
        className="css-so2e4e-Switch"
      >
        Label
      </label>
      <span
        className="css-1rpbwei-Switch"
      />
    </button>
  </div>
  <span
    className="css-kxpzc2-Typography e1eqcpp10"
  >
    Right
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch With Error 1`] = `
Array [
  <div
    className="css-gxbv2c-Switch"
  >
    <span
      className="css-a4pg8w-Typography-Label e1eqcpp10"
      id="headlessui-label-43"
      onClick={[Function]}
    >
      Switch
    </span>
    <button
      aria-checked={true}
      aria-labelledby="headlessui-label-43"
      className="css-i1qc5z-Switch"
      id="headlessui-switch-44"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
    >
      <label
        className="css-so2e4e-Switch"
      >
        Switch
      </label>
      <span
        className="css-1ldsxb7-Switch"
      />
    </button>
  </div>,
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-dzbg2z-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/Form/Switch With Hint 1`] = `
Array [
  <div
    className="css-gxbv2c-Switch"
  >
    <span
      className="css-a4pg8w-Typography-Label e1eqcpp10"
      id="headlessui-label-41"
      onClick={[Function]}
    >
      Switch
    </span>
    <button
      aria-checked={true}
      aria-labelledby="headlessui-label-41"
      className="css-i4flkr-Switch"
      id="headlessui-switch-42"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
    >
      <label
        className="css-so2e4e-Switch"
      >
        Switch
      </label>
      <span
        className="css-1ldsxb7-Switch"
      />
    </button>
  </div>,
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-19xwz45-Typography e1eqcpp10"
      fontSize="small"
    >
      A useful hint here
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/IconButton Contained 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Disabled 1`] = `
<button
  className="css-1k7z95i-Button e1p27jrl0"
  disabled={true}
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Full Width 1`] = `
<button
  className="css-1yllye1-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Large 1`] = `
<button
  className="css-1hvu46c-Button e1p27jrl0"
  size="large"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Link 1`] = `
<a
  className="css-7mou0n-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</a>
`;

exports[`Storyshots Shared/UI/IconButton Medium 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton No Shadow 1`] = `
<button
  className="css-16j7oqy-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Outlined 1`] = `
<button
  className="css-hq98lq-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Primary 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Rounded 1`] = `
<button
  className="css-168lrg4-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Secondary 1`] = `
<button
  className="css-ojs4nx-Button e1p27jrl0"
  color="secondary"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Small 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Text 1`] = `
<button
  className="css-15ghc94-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/Loaders/LinearIndicator Primary 1`] = `
<div
  className="css-1prxrkl-LinearIndicator"
>
  <div
    className="css-1j3bg6v-Component"
  >
    <div
      className="shim css-p8h9f7-LinearIndicator"
    />
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Loaders/LinearIndicator Secondary 1`] = `
<div
  className="css-2ny3uk-LinearIndicator"
>
  <div
    className="css-1j3bg6v-Component"
  >
    <div
      className="shim css-p8h9f7-LinearIndicator"
    />
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Loaders/Spinner Primary 1`] = `
<div
  className="css-1be343j-Spinner"
>
  <div
    className="css-7cvwhs-Spinner"
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Custom 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "342px",
        "width": "342px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Large 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Medium 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Primary 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Small 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "86px",
        "width": "86px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Modal Custom Footer 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Modal Full Screen 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Modal Full Width 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Modal Primary 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Modal With Content 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Pill Custom Children 1`] = `
<span
  className="css-fiuc8s-Pill"
>
  <button
    className="border-2 border-secondary-400"
  >
    I am a button
  </button>
</span>
`;

exports[`Storyshots Shared/UI/Pill Primary 1`] = `
<span
  className="css-fiuc8s-Pill"
>
  <span
    className="css-9dmnqu-Typography-Pill e1eqcpp10"
  >
    Hello
  </span>
</span>
`;

exports[`Storyshots Shared/UI/Pill With Close 1`] = `
<span
  className="css-fiuc8s-Pill"
>
  <span
    className="css-9dmnqu-Typography-Pill e1eqcpp10"
  >
    Hello
  </span>
  <div
    className="css-hls8o7-Pill"
  >
    <button
      aria-label="Close"
      className="css-5a6dou-CloseButton"
      onClick={[Function]}
    >
      <svg
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 18L18 6M6 6l12 12"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </button>
  </div>
</span>
`;

exports[`Storyshots Shared/UI/Pill With Icon 1`] = `
<span
  className="css-fiuc8s-Pill"
>
  <span>
    <span
      className="css-12e79s5-Pill"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={12}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
  </span>
  <span
    className="css-9dmnqu-Typography-Pill e1eqcpp10"
  >
    Hello
  </span>
</span>
`;

exports[`Storyshots Shared/UI/Popover Primary 1`] = `
<div
  className="css-udih9e-Template"
>
  <div
    className="css-17d5uml-Popover"
  >
    <button
      aria-expanded={false}
      className="css-1tqgvre-Button-Popover e1p27jrl0"
      id="headlessui-popover-button-5"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-86b7hj-Typography-Popover e1eqcpp10"
      >
        Popover
      </span>
      <svg
        aria-hidden="true"
        className="css-1q5g0oi-Popover"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Popover Top 1`] = `
<div
  className="css-udih9e-Template"
>
  <div
    className="css-17d5uml-Popover"
  >
    <button
      aria-expanded={false}
      className="css-1tqgvre-Button-Popover e1p27jrl0"
      id="headlessui-popover-button-8"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-86b7hj-Typography-Popover e1eqcpp10"
      >
        Popover
      </span>
      <svg
        aria-hidden="true"
        className="css-1q5g0oi-Popover"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/SideDrawer Primary 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/SideDrawer Right 1`] = `
<button
  className="css-e8v7tn-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Tabs/TabList Primary 1`] = `
<div
  aria-orientation="horizontal"
  className="css-19hglq7-TabList"
  role="tablist"
>
  <button
    aria-selected={false}
    className="css-1duw0jq-TabList"
    id="headlessui-tabs-tab-45"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1k75k7r-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      New
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1duw0jq-TabList"
    id="headlessui-tabs-tab-46"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1k75k7r-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      Old
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1duw0jq-TabList"
    id="headlessui-tabs-tab-47"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1k75k7r-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      Something else
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Tabs/TabList With Icons 1`] = `
<div
  aria-orientation="horizontal"
  className="css-19hglq7-TabList"
  role="tablist"
>
  <button
    aria-selected={false}
    className="css-1duw0jq-TabList"
    id="headlessui-tabs-tab-48"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1k75k7r-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      Notifications
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1duw0jq-TabList"
    id="headlessui-tabs-tab-49"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1k75k7r-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      Another one
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1duw0jq-TabList"
    id="headlessui-tabs-tab-50"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1k75k7r-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      More tab
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Tabs/TabList With Only Icons 1`] = `
<div
  aria-orientation="horizontal"
  className="css-19hglq7-TabList"
  role="tablist"
>
  <button
    aria-selected={false}
    className="css-1duw0jq-TabList"
    id="headlessui-tabs-tab-51"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1k75k7r-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1duw0jq-TabList"
    id="headlessui-tabs-tab-52"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1k75k7r-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1duw0jq-TabList"
    id="headlessui-tabs-tab-53"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1k75k7r-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Tabs/TabPanels Primary 1`] = `
Array [
  <div
    aria-orientation="horizontal"
    className="css-19hglq7-TabList"
    role="tablist"
  >
    <button
      aria-selected={false}
      className="css-1duw0jq-TabList"
      id="headlessui-tabs-tab-54"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <span
        className="css-1k75k7r-Typography-TabList e1eqcpp10"
        fontSize="small"
      >
        New
      </span>
    </button>
    <button
      aria-selected={false}
      className="css-1duw0jq-TabList"
      id="headlessui-tabs-tab-55"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <span
        className="css-1k75k7r-Typography-TabList e1eqcpp10"
        fontSize="small"
      >
        Old
      </span>
    </button>
    <button
      aria-selected={false}
      className="css-1duw0jq-TabList"
      id="headlessui-tabs-tab-56"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <span
        className="css-1k75k7r-Typography-TabList e1eqcpp10"
        fontSize="small"
      >
        Something else
      </span>
    </button>
  </div>,
  <div
    className="css-1xcmdsv-TabPanels"
  />,
]
`;

exports[`Storyshots Shared/UI/Toast Custom 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-e8v7tn-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Custom JSX 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-e8v7tn-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Error 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-e8v7tn-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Loading 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-e8v7tn-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Primary 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-e8v7tn-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Success 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-e8v7tn-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Typography Body 1`] = `
<span
  className="css-12sht3b-Typography e1eqcpp10"
>
  My Body 1
</span>
`;

exports[`Storyshots Shared/UI/Typography Body 2 1`] = `
<span
  className="css-hd1tcl-Typography e1eqcpp10"
>
  My Body 2
</span>
`;

exports[`Storyshots Shared/UI/Typography Bold 1`] = `
<span
  className="css-1hz7gcu-Typography e1eqcpp10"
  fontWeight="bold"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Heading 1`] = `
<h2
  className="css-1lhz13y-Typography e1eqcpp10"
>
  My Heading
</h2>
`;

exports[`Storyshots Shared/UI/Typography Italic 1`] = `
<span
  className="css-13iao0c-Typography e1eqcpp10"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Light 1`] = `
<span
  className="css-1s06rs5-Typography e1eqcpp10"
  fontWeight="light"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Noto Serif 1`] = `
<span
  className="css-1yairov-Typography e1eqcpp10"
  fontFamily="notoSerif"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Primary 1`] = `
<span
  className="css-12sht3b-Typography e1eqcpp10"
>
  My Typography
</span>
`;

exports[`Storyshots Shared/UI/Typography Primary Color 1`] = `
<span
  className="css-13dj7hd-Typography e1eqcpp10"
  color="primary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Sans 1`] = `
<span
  className="css-kxpzc2-Typography e1eqcpp10"
  fontFamily="sans"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Secondary Color 1`] = `
<span
  className="css-9c1726-Typography e1eqcpp10"
  color="secondary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Text Primary Color 1`] = `
<span
  className="css-kxpzc2-Typography e1eqcpp10"
  color="textPrimary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Text Secondary Color 1`] = `
<span
  className="css-1e5sktk-Typography e1eqcpp10"
  color="textSecondary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Underlined 1`] = `
<span
  className="css-t5cudr-Typography e1eqcpp10"
>
  My Text
</span>
`;
